--- a/style.css
+++ b/style.css
@@ -1,15 +1,29 @@
 body{
-  background-color: black;
+  background: linear-gradient(to bottom, black, rgb(40, 40, 40));
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
-  color: rgba(255, 255, 255, 0.821);
+  color: rgba(255, 255, 255, 0.889);
   text-align: center;
   font-weight: 500;
   font-size: 35pt;
   margin-bottom: 5px;
 }
 
+.resume {
+  text-align: center;
+  color: white;
+  font-size: 21px;
+
+}
+.resume p a{
+  text-decoration: underline;
+  color: white;
+}
 .social-icons {
   display: flex;
   justify-content: center;
@@ -18,7 +32,7 @@ h1 {
 }
 
 .social-icons a {
-  color: gray;
+  color: rgb(147, 147, 147);
   transition: color 0.5s ease;
 }
 
@@ -26,3 +40,65 @@ h1 {
   color: white;
 }
 
+nav {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+
+}
+
+nav a{
+  position: relative;
+  text-decoration: none;
+  color: white;
+}
+
+nav a::after{
+  content: ''; 
+  width: 0; 
+  height: 2px; 
+  background: #ffffff; 
+  position: absolute; 
+  left: 0; 
+  bottom: -1px; 
+  transition: 0.5s;
+}
+
+nav a:hover::after{
+  width: 100%;
+}
+
+h3{
+  color: white;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.main {
+  color: white;
+  text-align: center;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact p {
+  margin-bottom: 50px;
+}
+
+.contact #contactBtn {
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  border: 3px solid rgb(244, 243, 243);
+  padding: 25px;
+  position: relative;
+  border-radius: 5%;
+  transition: all 0.5s ease;
+  transform: translate(0, 0); /* starting position */
+}
+
+.contact #contactBtn:hover {
+  transform: translate(-12px, -10px); /* move left & up */
+  box-shadow: 4px 4px 1px 1px white;
+}
